Update azure-pipelines2.yml for Azure Pipelines

--- a/azure-pipelines2.yml
+++ b/azure-pipelines2.yml
@@ -11,5 +11,5 @@ variables:
 
 steps:
 - script: dotnet build---configuration.$(buildConfiguration)
-  displaytime: 'dotnet build $(buildConfiguration)'
+  displayName: 'dotnet build $(buildConfiguration)'
  
