--- a/azure-pipelines2.yml
+++ b/azure-pipelines2.yml
@@ -9,5 +9,7 @@ pool:
 variables:
   buildConfiguration: 'Release'
 
-
+steps:
+- script: dotnet build---configuration.$(buildConfiguration)
+  displayName: 'dotnet build $(buildConfiguration)'
  
