--- a/azure-pipelines2.yml
+++ b/azure-pipelines2.yml
@@ -5,7 +5,9 @@ trigger:
 
 pool:
   name: 'Demo'
-
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
 variables:
   buildConfiguration: 'Release'
 
