--- a/azure-pipelines2.yml
+++ b/azure-pipelines2.yml
@@ -5,13 +5,15 @@ trigger:
 
 pool:
   name: 'Demo'
-  task: DotNetCoreCLI@2
-  inputs:
-    command: 'build'
+  
 variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: dotnet build---configuration.$(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+- task: UseDotNet@2
+  displayName: 'Use .NET Core sdk'
+  inputs:
+        packageType: sdk
+        version: 6.0.x
+        installationPath: $(Agent.ToolsDirectory)/dotnet  
  
